@@ -1,3 +1,7 @@
+2012-12-03  Rene Liebscher <R.Liebscher@gmx.de>
+
+	* pickit2.c: reordered #includes for non-usb configuration
+
 2012-12-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* jtag3.c: Enable interactive adjustment of the various
